misc: move files around
